--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/modules.xml
+
+.idea/prettier.xml
+
+.idea/react-burger.iml
+
+.idea/
